[package]
name = "uwu_bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"
anchor-spl = "0.26.0"
anyhow = "1.0.58"
bytemuck = "1.12.3"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
marginfi = { path = "../../../programs/marginfi", version = "0.1.0", features = [
    "client",
    "no-entrypoint",
] }
shellexpand = { version = "3.0.0", features = ["tilde"] }
solana-account-decoder = "1.14.12"
solana-client = "1.14.11"
solana-sdk = "1.14.11"
tokio = "1.24"

[workspace]
