[package]
name = "rpc_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
backoff = { workspace = true }
base64 = "0.21.0"
bs58 = "0.4.0"
futures = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
