[tool.poetry]
name = "dataflow_etls"
version = "0.1.0"
description = ""
authors = ["man0s <95379755+losman0s@users.noreply.github.com>"]

[tool.poetry.scripts]
job = "dataflow_etls.job:main"

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0.38.4"
apache-beam = { extras = ["gcp"], version = "2.44.0" }
solders = "^0.14.0"
anchorpy = "^0.16.0"
based58 = "^0.1.1"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
typer = "^0.7.0"
ipython = "^8.10.0"
autoflake = "^2.0.1"
genpy = "^2022.1"
solana = "^0.29.1"
pre-commit = "^2.18.1"
mypy = "^0.950"

[tool.black]
line-length = 132
target-version = ['py37', 'py38', 'py39', 'py310' ]
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | \.poetry
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
