[package]
name = "marginfi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "lend"
path = "fuzz_targets/lend.rs"
test = false
doc = false

[dependencies]
solana-sdk = "=1.17.34"
solana-program = "=1.17.34"
solana-program-test = "=1.17.34"
spl-token = "4.0.0"

anchor-lang = { git = "https://github.com/mrgnlabs/anchor2.git", rev = "ba99f58b28453304d905cc81f7a9040fa9b2f0d7" }
anchor-spl = { git = "https://github.com/mrgnlabs/anchor2.git", rev = "ba99f58b28453304d905cc81f7a9040fa9b2f0d7" }

pyth-sdk-solana = "0.10.1"

anyhow = "1.0.68"
arbitrary = { version = "1.2.2", features = ["derive"] }
bumpalo = "=3.11.1"
libfuzzer-sys = "0.4"
safe-transmute = "0.11.2"
rand = "0.8.5"
bytemuck = "1.12.3"
fixed = "1.21.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", optional = true }
log4rs = { version = "1.2.0", optional = true }
once_cell = "1.17.1"
base64 = "0.22.1"
itertools = "0.12.1"
strum = { version = "0.26.3", features = ["derive"], default-features = false }

quinn-proto = { version = "0.10.6", features = ["arbitrary"] }

[features]
capture_log = ["log", "log4rs"]

[dependencies.marginfi]
path = ".."
features = ["no-entrypoint", "debug", "client"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1
