[package]
name = "marginfi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "lend"
path = "fuzz_targets/lend.rs"
test = false
doc = false

[dependencies]
marginfi-type-crate = { path = "../../../type-crate", features = ["anchor"] }
solana-sdk = "=2.1.20"
solana-program = "=2.1.20"
solana-program-test = "=2.1.20"
spl-token = "7.0.0"

anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }

pyth-solana-receiver-sdk = "0.6.0"

anyhow = "1.0.68"
arbitrary = { version = "1.2.2", features = ["derive"] }
bumpalo = "=3.11.1"
libfuzzer-sys = "0.4"
safe-transmute = "0.11.2"
rand = "0.8.5"
bytemuck = "1.22.0"
fixed = "=1.28.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", optional = true }
log4rs = { version = "1.2.0", optional = true }
once_cell = "1.17.1"
base64 = "0.22.1"
itertools = "0.12.1"
strum = { version = "0.26.3", features = ["derive"], default-features = false }

quinn-proto = { version = "0.10.6", features = ["arbitrary"] }

[features]
capture_log = ["log", "log4rs"]

[dependencies.marginfi]
path = ".."
features = ["no-entrypoint", "debug", "client"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

## Notes for usable lockfile generation in Solana land
# Patch a version of half compatabile with fixed and Rust <=1.79:
# cargo update -p half --precise 2.4.1
# 
# Patch zerofrom and litemap:
# cargo update -p zerofrom --precise 0.1.5
# cargo update -p litemap --precise 0.7.4