[package]
name = "test-utilities"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# marginfi = { path = ".." }
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
bytemuck = "1.9.1"
fixed = "1.12.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
pyth-sdk-solana = "0.7.0"
solana-program = "1.14.11"
static_assertions = "1.1.0"
type-layout = "0.2.0"
anyhow = "1.0.66"
assert_matches = "1.5.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"
solana-logger = "1.14.11"
solana-program-test = "1.14.11"
solana-sdk = "1.14.11"

[dependencies.marginfi]
path = ".."
features = ["client"]

[dependencies.lip]
path = "../../liquidity-incentive-program"
package = "liquidity-incentive-program"

# Prevent this from interfering with workspaces
# [workspace]
# members = ["."]
